tests/expectations/compiler/statements/all_loops_fail.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', '..', '?', 'as' -- found '..='
    --> compiler-test:15:28
     |
  15 |         for a: u32 in 10u32..=0u32 {
     |                            ^^^
